--- a/Rock.Tests.Performance/Rock.Tests.Performance.csproj
+++ b/Rock.Tests.Performance/Rock.Tests.Performance.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
     <PackageReference Include="System.Security.AccessControl" Version="5.0.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+    <PackageReference Include="System.ValueTuple" Version="4.6.1" />
   </ItemGroup>
 
   <ItemGroup>
