--- a/Rock/packages.config
+++ b/Rock/packages.config
@@ -5,7 +5,7 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net472" />
   <package id="AWSSDK.Core" version="3.3.25.4" targetFramework="net472" />
   <package id="AWSSDK.S3" version="3.3.21.1" targetFramework="net472" />
-  <package id="Azure.Core" version="1.41.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.44.1" targetFramework="net472" />
   <package id="Azure.Core.Amqp" version="1.3.1" targetFramework="net472" />
   <package id="Azure.Identity" version="1.12.0" targetFramework="net472" />
   <package id="Azure.Messaging.ServiceBus" version="7.18.1" targetFramework="net472" />
@@ -74,26 +74,31 @@
   <package id="Microsoft.Azure.SignalR.Protocols" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.Azure.Storage.Blob" version="11.1.3" targetFramework="net472" />
   <package id="Microsoft.Azure.Storage.Common" version="11.1.3" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.5" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net472" />
+  <package id="Microsoft.Extensions.AI" version="9.5.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.AI.Abstractions" version="9.5.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Diagnostics.HealthChecks" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Debug" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.TraceSource" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.VectorData.Abstractions" version="9.5.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.61.3" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.61.3" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.35.0" targetFramework="net472" />
@@ -107,6 +112,7 @@
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.SemanticKernel.Abstractions" version="1.54.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="11.0.2" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net472" />
@@ -140,10 +146,10 @@
   <package id="SixLabors.ImageSharp.Drawing" version="1.0.0-beta15" targetFramework="net472" />
   <package id="stream-chat-net" version="2.10.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
+  <package id="System.ClientModel" version="1.4.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.7.0" targetFramework="net472" />
   <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
@@ -156,7 +162,7 @@
   <package id="System.Linq.Dynamic.Core" version="1.4.2" targetFramework="net472" />
   <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
-  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
+  <package id="System.Memory.Data" version="8.0.1" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
@@ -173,12 +179,12 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="6.0.9" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.5" targetFramework="net472" />
   <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
   <package id="TimeZoneConverter" version="6.0.1" targetFramework="net472" />
   <package id="Twilio" version="5.1.0" targetFramework="net472" />
   <package id="UAParser" version="3.1.44" targetFramework="net472" />
