--- a/Rock.AI.Agent/Rock.AI.Agent.csproj
+++ b/Rock.AI.Agent/Rock.AI.Agent.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.ClientModel, Version=1.4.1.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ClientModel.1.4.1\lib\netstandard2.0\System.ClientModel.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -144,12 +145,13 @@
       <Link>Properties\AssemblySharedInfo.cs</Link>
     </Compile>
     <Compile Include="AiProxySkill.cs" />
-    <Compile Include="AzureOpenAiAgent.cs" />
+    <Compile Include="Providers\AzureOpenAiAgent.cs" />
     <Compile Include="ChatAgent.cs" />
     <Compile Include="ChatAgentBuilder.cs" />
     <Compile Include="ChatAgentFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceCollectionExtensions.cs" />
+    <Compile Include="Skills\GroupManagerSkill.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rock.Common\Rock.Common.csproj">
