--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -858,11 +858,28 @@
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.cs" />
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.Logic.cs" />
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpointService.cs" />
+    <Compile Include="Model\CodeGenerated\AIAgentService.CodeGenerated.cs" />
+    <Compile Include="Model\CodeGenerated\AIAgentSkillService.CodeGenerated.cs" />
+    <Compile Include="Model\CodeGenerated\AISkillFunctionService.CodeGenerated.cs" />
+    <Compile Include="Model\CodeGenerated\AISkillService.CodeGenerated.cs" />
     <Compile Include="Model\CodeGenerated\AutomationEventService.CodeGenerated.cs" />
     <Compile Include="Model\CodeGenerated\AutomationTriggerService.CodeGenerated.cs" />
     <Compile Include="Model\CodeGenerated\LavaApplicationService.CodeGenerated.cs" />
     <Compile Include="Model\CodeGenerated\LavaEndpointService.CodeGenerated.cs" />
     <Compile Include="Jobs\RunLava.cs" />
+    <Compile Include="Model\Core\AIAgentSkill\AIAgentSkill.cs" />
+    <Compile Include="Model\Core\AIAgentSkill\AIAgentSkill.SaveHook.cs" />
+    <Compile Include="Model\Core\AIAgent\AIAgent.cs" />
+    <Compile Include="Model\Core\AIAgent\AIAgent.Logic.cs" />
+    <Compile Include="Model\Core\AIAgent\AIAgentService.cs" />
+    <Compile Include="Model\Core\AISkillFunction\AISkillFunction.cs" />
+    <Compile Include="Model\Core\AISkillFunction\AISkillFunction.Logic.cs" />
+    <Compile Include="Model\Core\AISkillFunction\AISkillFunction.SaveHook.cs" />
+    <Compile Include="Model\Core\AISkillFunction\AISkillFunctionService.cs" />
+    <Compile Include="Model\Core\AISkill\AISkill.cs" />
+    <Compile Include="Model\Core\AISkill\AISkill.Logic.cs" />
+    <Compile Include="Model\Core\AISkill\AISkill.SaveHook.cs" />
+    <Compile Include="Model\Core\AISkill\AISkillService.cs" />
     <Compile Include="Model\Core\AutomationEvent\AutomationEvent.cs" />
     <Compile Include="Model\Core\AutomationEvent\AutomationEvent.Logic.cs" />
     <Compile Include="Model\Core\AutomationEvent\AutomationEvent.SaveHook.cs" />
@@ -2832,7 +2849,10 @@
     <Compile Include="Web\Cache\ClearReferencedEntityDependenciesConsumer.cs" />
     <Compile Include="Web\Cache\Entities\AdaptiveMessageAdaptationCache.cs" />
     <Compile Include="Web\Cache\Entities\AdaptiveMessageCache.cs" />
+    <Compile Include="Web\Cache\Entities\AIAgentCache.cs" />
     <Compile Include="Web\Cache\Entities\AIProviderCache.cs" />
+    <Compile Include="Web\Cache\Entities\AISkillCache.cs" />
+    <Compile Include="Web\Cache\Entities\AISkillFunctionCache.cs" />
     <Compile Include="Web\Cache\Entities\AssetStorageProviderCache.cs" />
     <Compile Include="Web\Cache\Entities\AutomationEventCache.cs" />
     <Compile Include="Web\Cache\Entities\AutomationTriggerCache.cs" />
